adds GUI